--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,8 +9,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3308/school?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ""
-    password: ""
+    username: root
+    password: 비밀이양 ~ 잇힝
 thymeleaf:
   cache: false
   check-template-location: true
